samples/_failures_safe/1761318791_4cd080_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5574c40.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_a5574c40.c:142:5: error: expected expression at end of input
  142 |     for (
      |     ^~~
./samples/SAFE/__tmp_a5574c40.c:142:5: error: expected declaration or statement at end of input
